Project-1 deployed to site

--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
     <section id="projects">
       <div class="container section-box">
         <h2>/ Projects</h2>
+      <div class="tabs">
+        <button class="tab-button active" data-tab="project-1">Interactive Spreadsheet</button>
+      </div>
+      <div class="tab-content active" id="project-1">
+          <p><b>Interactive Spreadsheet</b></p>
+          <p>A 3D Interactive Spreadsheet created in Java using Processing Library</p>
+          <a href="https://github.com/ShadyBooth/Interactive-Spreadsheet" class="git-button" style="text-align: center;">View Repository</a>
+          <video width="950" height="600" controls>
+          <source src="assets/videos/Project-1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
       </div>
     </section>
   </main>
