--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
             <p><i>Kinetic IT, Supporting Qantas & Jetstar</i> | Mascot, NSW </p>
             <p>March 2025 - Present | Hybrid</p>
           <ul>
-            <li>Administered user accounts and devices via Active Directory, Azure AD, and Intune.</li>
-            <li>Troubleshot and resolved complex technical issues, building strong problem-solving and debugging skills 
-              transferable to software development.</li>
-            <li>Delivered remote IT support by using SCCM Remote Control and RDP, alongside onsite support.</li>
-            <li>Achieved the team’s highest NPS in May 2025, reflecting excellent customer engagement.</li>
+            <li>Deliver remote IT support by using SCCM Remote Control and RDP, alongside onsite support.</li>
+            <li>Provide user support for Microsoft Products, including SharePoint, OneDrive, Outlook, and Teams.</li>
+            <li>Utilise ServiceNow to log, track, and manage service desk tickets, escalating issues when required.</li>
+            <li>Administer user accounts and devices via Active Directory, Azure AD, M365 Admin Center, Exchange, and Intune.</li>
+            <li>Maintain Exchange mailbox permissions and configurations.</li>
+            <li>Troubleshoot hardware, software, and network incidents promptly, collaborating with a range of vendors.</li>
+            <li>Follow internal documentation whilst achieving the highest Net Promoter Score (NPS) in May 2025.</li>
           </ul>
         </div>
         <div class="tab-content" id="job2">
@@ -129,4 +131,5 @@
     </div>
   </footer>
 </body>
+
 </html>
